# build-smell-sniffer

./: Dockerfile  README.md  app.py  pom.xml  pyproject.toml
common/: version_utils.py
secure_linter/: __init__.py  cmake_parser.py  cmake_security_checks.py  gradle_parser.py  gradle_security_checks.py  makefile_analyzer.py  makefile_security_checks.py  maven_parser.py  maven_security_checks.py
templates/: index.html  results.html
tests/: run_linter_empricalanalysis.py  run_linter_sanity.py  run_linter_userstudy.py  update_google_sheet.py
